# kohle

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  todo.md
alembic/: env.py
alembic/versions/: 0001_init.py  35071ba4871d_add_unique_constraint_for_debit_category.py  5bf6211f49e5_operation_tracking.py  605b7c8fd92d_transactions.py  62313518700b_fix_wrong_columns_in_operation.py
docs/: double_entry.md  plugins.md  plugins_from_llm.md  to_llm.md
kohle/: cli.py  db.py  models.py  tui.py
kohle/app/: cli.py  tui.py
kohle/app/cli/: cli.py
kohle/app/plugins/: kohle_deutsche_bank_importer.py
kohle/app/tui/: provider.py  tui.py
kohle/app/tui/screens/: categories.py  category_screen.py
kohle/app/tui/styles/: category_form.tcss
kohle/core/: option.py  result.py  resultify.py
kohle/db/: connection.py  uow.py
kohle/domain/: domain_errors.py  models.py
kohle/infrastructure/: crud.py  infra_errors.py  model_serde.py  serializer_v2.py  sqlalchemy_model_adapter.py  transaction_context.py  uow.py
kohle/models/: models.py
kohle/plugin/: importer_plugin.py  plugin_manager.py
kohle/services/: account_services.py  categories.py  debit_categories.py  debit_categories_services.py  errors.py  operation_services.py  transactions_services.py
kohle/use_cases/: accounts.py  debit_categories.py  operations.py  transactions.py
tests/: conftest.py  test_account_services.py  test_accounts.py  test_add_debit_category.py  test_debit_categories.py  test_debit_categories_service.py  test_transaction_services.py  test_transactions_use_cases.py
(+14 files in other folders)
